non_executable_reasons_record_from_random_10k/9491.txt
3.5
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
%%html

<iframe width=800 height=600 src="http://hystrix.community.pipeline.io/hystrix-dashboard/monitor/monitor.html?streams=%5B%7B%22name%22%3A%22Model%20Servers%22%2C%22stream%22%3A%22http%3A%2F%2Fturbine.community.pipeline.io%2Fturbine.stream%22%2C%22auth%22%3A%22%22%2C%22delay%22%3A%22%22%7D%5D"></iframe>
------------------

[0;36m  File [0;32m"<ipython-input-1-81f120addaf2>"[0;36m, line [0;32m3[0m
[0;31m    %%html[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-81f120addaf2>, line 3)

Executability                            : False
